--- a/templates/crimes.html
+++ b/templates/crimes.html
@@ -6,32 +6,32 @@
     <body>
         <nav class="navbar navbar-expand-lg bg-body-tertiary">
         <div class="container-fluid">
-            <a class="navbar-brand" href="home.html">Dossier City System</a>
+            <a class="navbar-brand" href="home">Dossier City System</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                 <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="criminals.html">Criminals</a>
+                    <a class="nav-link active" aria-current="page" href="criminals">Criminals</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="probation_officers.html">Probation Officers</a>
+                    <a class="nav-link active" aria-current="page" href="probation_officers">Probation Officers</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="officers.html">Officers</a>
+                    <a class="nav-link active" aria-current="page" href="officers">Officers</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="appeals.html">Appeals</a>
+                    <a class="nav-link active" aria-current="page" href="appeals">Appeals</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="charges.html">Charges</a>
+                    <a class="nav-link active" aria-current="page" href="charges">Charges</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="sentences.html">Sentences</a>
+                    <a class="nav-link active" aria-current="page" href="sentences">Sentences</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="index.html">Logout</a>
+                    <a class="nav-link active" aria-current="page" href="index">Logout</a>
                 </li>
             </ul>
             </div>
