--- a/templates/appeals.html
+++ b/templates/appeals.html
@@ -31,7 +31,7 @@
                     <a class="nav-link active" aria-current="page" href="sentences">Sentences</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="index">Logout</a>
+                    <a class="nav-link active" aria-current="page" href="/">Logout</a>
                 </li>
             </ul>
             </div>
