--- a/templates/home.html
+++ b/templates/home.html
@@ -31,7 +31,7 @@
                     <a class="nav-link active" aria-current="page" href="sentences">Sentences</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="index">Logout</a>
+                    <a class="nav-link active" aria-current="page" href="/">Logout</a>
                 </li>
             </ul>
             </div>
@@ -57,7 +57,7 @@
             <a class="nav-link active" aria-current="page" href="sentences">Sentences</a>
         </li>
         <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="index">Logout</a>
+            <a class="nav-link active" aria-current="page" href="/">Logout</a>
         </li>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     </body>
