--- a/templates/charges.html
+++ b/templates/charges.html
@@ -13,6 +13,9 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                 <li class="nav-item">
+                    <a class="nav-link active" aria-current="page" href="crimes">Crimes</a>
+                </li>
+                <li class="nav-item">
                     <a class="nav-link active" aria-current="page" href="criminals">Criminals</a>
                 </li>
                 <li class="nav-item">
