--- a/templates/criminals.html
+++ b/templates/criminals.html
@@ -83,7 +83,7 @@
                   <h1 class="modal-title fs-5" id="addModalLabel">Add Criminal</h1>
                   <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
-                <form>
+                <form method="post">
                     <div class="modal-body">
                         <div class="row mb-3">
                             <div class="col-sm-2 col-form-label">
@@ -106,7 +106,7 @@
                                 <label for="alias">Alias</label>
                             </div>
                             <div class="col-sm-10">
-                                <input type="text" name="l_name" id="alias" class="form-control">
+                                <input type="text" name="alias" id="alias" class="form-control">
                             </div>
                         </div>
                         <div class="row mb-3">
@@ -155,9 +155,9 @@
                                     <label class="form-check-label" for="vio_offender">
                                         Violent Offender
                                     </label>
-                                    <input class="form-check-input" type="checkbox" id="vio_offender">
+                                    <input class="form-check-input" type="checkbox" id="vio_offender" name="vio_offender" value="">
                                 </div>
-                                </div>
+                            </div>
                         </div>
                         <div class="row mb-3">
                             <div class="col-sm-10 offset-sm-2">
@@ -165,15 +165,15 @@
                                     <label class="form-check-label" for="probation_stat">
                                         On Probation
                                     </label>
-                                    <input class="form-check-input" type="checkbox" id="probation_stat">
+                                    <input class="form-check-input" type="checkbox" id="probation_stat" name="probation_stat" value="">
                                 </div>
-                                </div>
+                            </div>
                         </div>
                     </div>
                     <div class="modal-footer">
                         <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel
                         </button>
-                        <button type="button" class="btn btn-primary">Add Criminal</button>
+                        <input type="submit" class="btn btn-primary" value="Add Criminal" onclick="javascript: form.action='/add-criminal'; form.method='post'">
                     </div>
                 </form>
               </div>
