--- a/templates/crimes.html
+++ b/templates/crimes.html
@@ -75,7 +75,7 @@
                   <h1 class="modal-title fs-5" id="addModalLabel">Add a Crime</h1>
                   <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
-                <form>
+                <form method="post">
                     <div class="modal-body">
                         <div class="row mb-3">
                             <div class="col-sm-2 col-form-label">
@@ -90,12 +90,12 @@
                                 <label for="classification">Classification</label>
                             </div>
                             <div class="col-sm-10">
-                                <select class="form-select" id="c_id">
-                                    <option selected>Choose...</option>
-                                    <option value="felony">Felony</option>
-                                    <option value="misdemeanor">Misdemeanor</option>
-                                    <option value="other">Other</option>
-                                    <option value="undefined">Undefined</option>
+                                <select class="form-select" id="classification" name="classification">
+                                    <option selected value="">Choose...</option>
+                                    <option value="F">Felony</option>
+                                    <option value="M">Misdemeanor</option>
+                                    <option value="O">Other</option>
+                                    <option value="U">Undefined</option>
                                 </select>
                             </div>
                         </div>
@@ -112,11 +112,11 @@
                                 <label for="status">Status</label>
                             </div>
                             <div class="col-sm-10">
-                                <select class="form-select" id="status">
-                                    <option selected>Choose...</option>
-                                    <option value="closed">Closed</option>
-                                    <option value="can_appeal">Can Appeal</option>
-                                    <option value="in_appeal">In Appeal</option>
+                                <select class="form-select" id="status" name="status">
+                                    <option selected value="">Choose...</option>
+                                    <option value="CL">Closed</option>
+                                    <option value="CA">Can Appeal</option>
+                                    <option value="IA">In Appeal</option>
                                 </select>
                             </div>
                         </div>
@@ -140,7 +140,7 @@
                     <div class="modal-footer">
                         <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel
                         </button>
-                        <button type="button" class="btn btn-primary">Add Criminal</button>
+                        <input type="submit" class="btn btn-primary" value="Add Crime" onclick="javascript: form.action='/add-crime'; form.method='post'">
                     </div>
                 </form>
               </div>
