--- a/templates/probation_officers.html
+++ b/templates/probation_officers.html
@@ -81,7 +81,7 @@
                   <h1 class="modal-title fs-5" id="addModalLabel">Add Probation Officer</h1>
                   <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
-                <form>
+                <form method="post">
                     <div class="modal-body">
                         <div class="row mb-3">
                             <div class="col-sm-2 col-form-label">
@@ -153,13 +153,13 @@
                             </div>
                             <div class="col-sm-10">
                                 <div class="form-check">
-                                    <input class="form-check-input" type="radio" name="active" id="active" value="active">
+                                    <input class="form-check-input" type="radio" name="status" id="active" value="A" checked>
                                     <label class="form-check-label" for="active">
                                         Active
                                     </label>
                                 </div>
-                                <div class="form-check">
-                                    <input class="form-check-input" type="radio" name="active" id="inactive" value="inactive">
+                                <div class="form-check">`
+                                    <input class="form-check-input" type="radio" name="status" id="inactive" value="I">
                                     <label class="form-check-label" for="inactive">
                                         Inactive
                                     </label>
@@ -170,7 +170,7 @@
                     <div class="modal-footer">
                         <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel
                         </button>
-                        <button type="button" class="btn btn-primary">Add Probation Officer</button>
+                        <input type="submit" class="btn btn-primary" value="Add Probation Officer" onclick="javascript: form.action='/add-probation-officer'; form.method='post'">
                     </div>
                 </form>
               </div>
