--- a/templates/officers.html
+++ b/templates/officers.html
@@ -75,7 +75,7 @@
                   <h1 class="modal-title fs-5" id="addModalLabel">Add Officer</h1>
                   <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
-                <form>
+                <form method="post">
                     <div class="modal-body">
                         <div class="row mb-3">
                             <div class="col-sm-2 col-form-label">
@@ -123,13 +123,13 @@
                             </div>
                             <div class="col-sm-10">
                                 <div class="form-check">
-                                    <input class="form-check-input" type="radio" name="active" id="active" value="active">
+                                    <input class="form-check-input" type="radio" name="status" id="active" value="A" checked>
                                     <label class="form-check-label" for="active">
                                         Active
                                     </label>
                                 </div>
                                 <div class="form-check">
-                                    <input class="form-check-input" type="radio" name="active" id="inactive" value="inactive">
+                                    <input class="form-check-input" type="radio" name="status" id="inactive" value="I">
                                     <label class="form-check-label" for="inactive">
                                         Inactive
                                     </label>
@@ -140,7 +140,7 @@
                     <div class="modal-footer">
                         <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel
                         </button>
-                        <button type="button" class="btn btn-primary">Add Officer</button>
+                        <input type="submit" class="btn btn-primary" value="Add Officer" onclick="javascript: form.action='/add-officer'; form.method='post'">
                     </div>
                 </form>
               </div>
