now loading aliases

--- a/templates/criminals.html
+++ b/templates/criminals.html
@@ -64,7 +64,7 @@
                     <th scope="row">{{ criminal['Criminal_ID'] }}</th>
                     <td>{{ criminal['First'] }}</td>
                     <td>{{ criminal['Last'] }}</td>
-                    <td></td>
+                    <td>{{ criminal['alias'] }}</td>
                     <td>{{ criminal['Street'] }}</td>
                     <td>{{ criminal['City'] }}</td>
                     <td>{{ criminal['State'] }}</td>
