edit comment to prep for detailed view info

--- a/templates/charges.html
+++ b/templates/charges.html
@@ -75,7 +75,7 @@
             </table>
             <input type="submit" class="btn btn-danger" value="Remove Charges" onclick="javascript: form.action='/delete-charges'; form.method='post'">
         </form>
-        <!-- modal -->
+        <!-- add modal -->
         <div class="modal fade" id="addModal" tabindex="-1" aria-labelledby="addModalLabel" aria-hidden="true">
             <div class="modal-dialog">
               <div class="modal-content">
