--- a/templates/officers.html
+++ b/templates/officers.html
@@ -73,7 +73,7 @@
             </table>
             <input type="submit" class="btn btn-danger" value="Remove Officers" onclick="javascript: form.action='/delete-officer'; form.method='post'">
         </form>
-        <!-- modal -->
+        <!-- add modal -->
         <div class="modal fade" id="addModal" tabindex="-1" aria-labelledby="addModalLabel" aria-hidden="true">
             <div class="modal-dialog">
               <div class="modal-content">
