--- a/templates/appeals.html
+++ b/templates/appeals.html
@@ -69,7 +69,7 @@
             </table>
             <input type="submit" class="btn btn-danger" value="Delete Appeals" onclick="javascript: form.action='/delete-appeals'; form.method='post'">
         </form>
-        <!-- modal -->
+        <!-- add modal -->
         <div class="modal fade" id="addModal" tabindex="-1" aria-labelledby="addModalLabel" aria-hidden="true">
             <div class="modal-dialog">
               <div class="modal-content">
