--- a/templates/crimes.html
+++ b/templates/crimes.html
@@ -73,7 +73,7 @@
             </table>
             <input type="submit" class="btn btn-danger" value="Delete Selected Crimes" onclick="javascript: form.action='/delete-crimes'; form.method='post'">
         </form>
-        <!-- modal -->
+        <!-- add modal -->
         <div class="modal fade" id="addModal" tabindex="-1" aria-labelledby="addModalLabel" aria-hidden="true">
             <div class="modal-dialog">
               <div class="modal-content">
