--- a/templates/criminals.html
+++ b/templates/criminals.html
@@ -81,7 +81,7 @@
             </table>
             <input type="submit" class="btn btn-danger" value="Delete Criminals" onclick="javascript: form.action='/delete-criminals'; form.method='post'">
         </form>
-        <!-- modal -->
+        <!-- add modal -->
         <div class="modal fade" id="addModal" tabindex="-1" aria-labelledby="addModalLabel" aria-hidden="true">
             <div class="modal-dialog">
               <div class="modal-content">
